[project]
name = "ComfyUI-ModelInspect"
version = "0.2.0"
description = "Facilitates model files audit and search"
license = { file = "LICENSE" }
requires-python = ">=3.11"
classifiers = [
    "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://github.com/idlesign/ComfyUI-ModelInspect"

[tool.comfy]
PublisherId = "idlesign"
DisplayName = "ComfyUI-ModelInspect"
